# Data-Science-Connector

./: .gitignore  README.md  notes.md  prep-eval-env.sh  test_connector_csv.ipynb
access-server/: db.sqlite  main.py  requirements.txt
access-server/app/: constants.py  deps.py  main.py
access-server/app/db/: db.py
examples/: list_catalog_and_read_last.ipynb
ids-dir/: docker-compose.yml
ids-dir/colab-local-runtime-docker/: Dockerfile
intake-ids/: LICENSE  README.md  periodic.py  pyproject.toml  setup.cfg  setup.py  test.ipynb  test_catalog.ipynb
intake-ids/conda/: meta.yaml
intake-ids/intake_ids/: __init__.py  cache.py  catalog.py  connector-source.py  connector_controller.py  connector_csv_source.py  connector_source.py  resourceapi.py  sources.py
intake-ids/intake_ids/cli/: periodic.py
intake-ids/intake_ids/ids_information_model/: action.py  binary_operator.py  contract.py  described.py  duty.py  ids_model.py  left_operand.py  permission.py  rule.py  typed_literal.py
intake-ids/intake_ids/usage_control/: contract.py  contract_util.py  exceptions.py  rule.py  validation.py
intake_ids/: __init__.py  catalog.py  connector_controller.py  debug.py  exceptions.py
intake_ids/ids_information_model/: artifact.py  binary_operator.py  constraint.py  ids_model.py  left_operand.py  prohibition.py
intake_ids/usage_control/: contract.py  pattern.py  rule.py
package-test/: test_catalog.ipynb  test_catalog.py
prepare-provider/: docker-compose.yml  testprep.ipynb
prepare-provider/csv_weather/: 07.csv  09.csv  11.csv
prepare-provider/scripts/: LICENSE  contract_negotiation_allow_access.py  contract_negotiation_connector_restricted_access.py  contract_negotiation_count_access.py  contract_negotiation_log_access.py  contract_negotiation_security_level_access.py  multiple_artifacts.py  remote_data_can_be_updated.py  subscription_creation.py  subscription_with_route.py  subscriptionapi.py
tools/: notes.md
tools/ids-two-part-zip/: docker-compose.yml
(+37 files in other folders)
