[metadata]
name = intake-ids
description = description for intake-ids here
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://example.org
author = Omer Erdinc Yagmurlu
author_email = omeryagmurlu (special sign here) gmail com
license = MIT
license_file = LICENSE
project_urls = 
    Documentation = https://example.org
    Source = https://example.org
    Tracker = https://example.org

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    intake
    pandas
    requests
    pydantic
    isodate
    appdirs
python_requires = >=3.10

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    intake-ids-periodic-cleanup = intake_ids.cli.periodic:main
intake.drivers =
    connector_csv = intake_ids:ConnectorCSVSource
    connector = intake_ids.catalog:ConnectorCatalog