[metadata]
name = intake-ids
version = 0.0.1
description = description for intake-ids here
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://example.org
author = Omer Erdinc Yagmurlu
author_email = omeryagmurlu@gmail.com
license = MIT
license_file = LICENSE
project_urls = 
    Documentation = https://example.org
    Source = https://example.org
    Tracker = https://example.org

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    intake>=0.6.5
    pandas>=1.4.3
    requests>=2.28.1
    pydantic>=1.10.1
    isodate>=0.6.1
    appdirs>=1.4.4
python_requires = >=3.10

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    intake-ids-periodic-cleanup = intake_ids.cli.periodic:main
intake.drivers =
    connector_csv = intake_ids:ConnectorCSVSource
    connector = intake_ids.catalog:ConnectorCatalog